syntax = "proto3";

package ipc;
option go_package = "github.com/livekit/egress/pkg/ipc";

service EgressHandler {
  rpc GetPipelineDot(GstPipelineDebugDotRequest) returns (GstPipelineDebugDotResponse) {};
  rpc GetPProf(PProfRequest) returns (PProfResponse) {};
}

message GstPipelineDebugDotRequest {}

message GstPipelineDebugDotResponse {
  string dot_file = 1;
}

message PProfRequest {
  string profile_name = 1;
  int32 timeout = 2;
  int32 debug = 3;
}

message PProfResponse {
  bytes pprof_file = 1;
}
